# minisync

./: .editorconfig  Makefile  README.md  UNLICENSE  dune-project  input.sync  minisync.opam
lib/: ast.mli  autocomplete_lexer.ml  dune  lexer.mll  parser.mly
lib/backend/: gen_ml.ml  ocaml.ml  ocaml_printer.ml
lib/codegen/: codegen.ml  ir.ml  ir_optimizer.ml  ir_printer.ml
lib/normalizer/: nast.mli  nast_printer.ml  normalizer.ml  scheduler.ml
lib/printer/: printer_utils.ml  tree_printer.ml
lib/typechecker/: autocompleter.ml  clock.ml  clock.mli  expression.ml  expression.mli  tast.mli  tast_printer.ml  tast_utils.ml  tast_utils.mli  test_type.ml  type.ml  type.mli  typechecker.ml  typechecker.mli  typechecker_causality.ml  typechecker_combinatorial.ml  typechecker_common.ml  typechecker_decl.ml  typechecker_expr.ml  typechecker_type.ml
lib/utils/: error.ml  location.ml  location.mli
test/: runner.sh
test/autocomplete/: ac1.expected  ac1.sync  ac2.expected  ac2.sync  ac3_type.expected  ac3_type.sync  ac4_in_comment.sync  ac5_after_comment.sync  ac6_before_comment.sync  ac7_expr_prefix.expected  ac7_expr_prefix.sync
test/run/: fby.sync
test/syntax/fail/: different_types_in_if.sync  duplicate_constructor.sync  duplicate_let_binding.sync  duplicate_parameter.sync  every_in_combinatorial.sync  expected_bool_in_if.sync  init_fby_not_constant.sync  integer_too_large.expected  integer_too_large.sync  merge_branches_with_diff_type.sync  merge_constructor_not_in_enum.sync  merge_in_combinatorial.sync  merge_missing_constructor.sync  merge_not_enum.sync  (+21 more)
(+78 files in other folders)
